--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 		/>
 		<link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet" />
 
+		<link rel="preconnect" href="https://www.linkedin.com" />
 		<link rel="preconnect" href="https://joel-estumano.github.io" />
 	</head>
 	<body>
